2017-06-23  Youenn Fablet  <youenn@apple.com>

        webrtc::WebRtcSession is not handling correctly its state when setLocalDescription fails and is called again
        https://bugs.webkit.org/show_bug.cgi?id=173783

        Reviewed by Alex Christensen.

        * webrtc/libwebrtc/setLocalDescriptionCrash-expected.txt: Added.
        * webrtc/libwebrtc/setLocalDescriptionCrash.html: Added.

2017-06-23  Matt Lewis  <jlewis3@apple.com>

        Added additional test expectations for webrtc/video-replace-muted-track.html.
        https://bugs.webkit.org/show_bug.cgi?id=173608

        Unreviewed test expectations.

        * platform/mac-wk2/TestExpectations:

2017-06-23  Frederic Wang  <fwang@igalia.com>

        Remove fast/regions/region-leak-js-information-when-disabled-at-runtime.html
        https://bugs.webkit.org/show_bug.cgi?id=173784

        Reviewed by Simon Fraser.

        fast/regions/region-leak-js-information-when-disabled-at-runtime.html is supposed to test
        that some JS properties are undefined when CSS regions are disabled at runtime. However, this
        part is currently commented out and the test is no longer relevant after r200524. Hence we
        just remove it.

        * fast/regions/region-leak-js-information-when-disabled-at-runtime-expected.txt: Removed.
        * fast/regions/region-leak-js-information-when-disabled-at-runtime.html: Removed.

2017-06-23  Frederic Wang  <fwang@igalia.com>

        Use window.internals instead of overridePreference to set WebCore settings in tests
        https://bugs.webkit.org/show_bug.cgi?id=173714

        Reviewed by Simon Fraser.

        This commit is a first step to replace the use of testRunner.overridePreference with
        internals.settings.set* calls in tests. Such a call will fail immediately and obviously if
        its a function that does not exist, and these settings are restored properly between tests.